--- a/index.html
+++ b/index.html
@@ -1,5 +1,100 @@
 <!DOCTYPE html>
+<html lang="hi"><!DOCTYPE html>
 <html lang="hi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>मेरी पहली वेबसाइट</title>
+    <!-- यह CSS स्टाइल है, जो आपकी वेबसाइट को सुंदर बनाता है। -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1, h2 {
+            color: #0056b3;
+            text-align: center;
+        }
+        p {
+            line-height: 1.6;
+            text-align: justify;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+        input, textarea, button {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 100%;
+            box-sizing: border-box; /* padding को width में शामिल करने के लिए */
+        }
+        button {
+            background-color: #0056b3;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #004494;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <!-- यह आपकी वेबसाइट का शीर्षक है। -->
+        <h1>मेरी पहली वेबसाइट</h1>
+
+        <!-- यह आपका पुराना लेख है। -->
+        <p>
+            नमस्ते! यह मेरी पहली वेबसाइट है, जिसे मैंने HTML और CSS का उपयोग करके बनाया है। यह एक बहुत ही मज़ेदार अनुभव रहा है, और मुझे कोडिंग की दुनिया को सीखने में बहुत खुशी हो रही है।
+        </p>
+
+        <!-- यह आपका नया लेख है। -->
+        <h2>एक नई कहानी</h2>
+        <p>
+            आज मैं अपनी कोडिंग यात्रा का एक नया अध्याय शुरू कर रहा हूँ। मैंने सीखा है कि किसी भी बड़ी चीज़ को छोटे-छोटे हिस्सों में तोड़कर बनाना कितना आसान होता है। यह वेबसाइट भी मेरे लिए एक ऐसा ही प्रोजेक्ट है, जहाँ मैं हर दिन कुछ नया सीख रहा हूँ और उसे लागू कर रहा हूँ। मेरा लक्ष्य है कि मैं एक ऐसा डेवलपर बनूँ जो न केवल कोड लिख सके, बल्कि समस्याओं को रचनात्मक तरीके से हल भी कर सके।
+        </p>
+
+        <!-- यह आपका नया फ़ीचर है: "हमसे संपर्क करें" सेक्शन। -->
+        <hr style="margin: 20px 0;">
+        <h2>हमसे संपर्क करें</h2>
+        <!--
+            यह एक साधारण HTML फॉर्म है।
+            यह केवल देखने के लिए है और इसमें कोई कार्यक्षमता नहीं है।
+            फॉर्म सबमिट करने के लिए सर्वर-साइड (backend) कोड की जरूरत होती है।
+        -->
+        <form action="#" method="POST">
+            <label for="name">आपका नाम:</label>
+            <input type="text" id="name" name="user_name" placeholder="अपना नाम यहाँ लिखें" required>
+
+            <label for="email">आपका ईमेल:</label>
+            <input type="email" id="email" name="user_email" placeholder="अपना ईमेल यहाँ लिखें" required>
+
+            <label for="message">आपका संदेश:</label>
+            <textarea id="message" name="user_message" rows="4" placeholder="अपना संदेश यहाँ लिखें" required></textarea>
+
+            <button type="submit">संदेश भेजें</button>
+        </form>
+    </div>
+
+</body>
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
