--- a/index.html
+++ b/index.html
@@ -299,4 +299,5 @@
         <p>एक प्रमुख कार्यकारी का अप्रत्याशित प्रस्थान, खासकर एक जिसे महत्वपूर्ण वित्तीय बदलाव का श्रेय दिया जाता है, अनिश्चितता पैदा करता है और निवेशक विश्वास को कम कर सकता है, भले ही एक प्रतिस्थापन की तलाश की जा रही हो। सुजलॉन जैसी कंपनी के लिए, जिसने ऐतिहासिक रूप से महत्वपूर्ण वित्तीय चुनौतियों और ऋण पुनर्गठन को नेविगेट किया है, मजबूत और अनुभवी वित्तीय नेतृत्व की निरंतरता सर्वोपरि है। मोदी का प्रस्थान, भले ही एक उत्तराधिकारी की पहचान की जा रही हो, अस्थिरता की एक अवधि का परिचय देता है और भविष्य की वित्तीय रणनीति, विशेष रूप से ऋण प्रबंधन, पूंजी आवंटन और समग्र वित्तीय अनुशासन के बारे में सवाल उठाता है। यह अनिश्चितता जोखिम से बचने और बिक्री दबाव में वृद्धि का कारण बन सकती है, क्योंकि निवेशक स्थिरता और सिद्ध नेतृत्व पसंद करते हैं।</p>
 
         <h3>डिलीवरी के पीछे स्थापनाओं के संबंध में चिंताएँ</h3>
+        JAMSHED ALAM 
         <p>विश्लेषकों और निवेशकों के लिए चिंता का एक और क्षेत्र सुजलॉन की डिलीवरी और वास्तविक परियोजना स्थापनाओं के बीच लगातार अंतर है। जेएम फाइनेंशियल ने बताया कि पिछले तीन तिमाहियों में से प्रत्येक में स्थापनाएं लगातार कम रही हैं, जो डिलीवरी का लगभग 20% 
