--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <li><strong>नीतिगत वातावरण और घरेलू सामग्री:</strong> नवीकरणीय ऊर्जा के लिए निरंतर सरकारी समर्थन और घरेलू सामग्री आवश्यकताओं का प्रभावी कार्यान्वयन सुजलॉन को सीधे लाभ पहुंचाएगा। इन जनादेशों से संबंधित नीति या निष्पादन चुनौतियों में किसी भी बदलाव पर बारीकी से नज़र रखी जानी चाहिए।[11, 18, 28]</li>
             <li><strong>मार्जिन प्रक्षेपवक्र:</strong> इंजीनियरिंग, प्रोक्योरमेंट और कंस्ट्रक्शन (EPC) मिश्रण में उतार-चढ़ाव मार्जिन को प्रभावित कर सकता है। निवेशकों को परिचालन दक्षता और अनुकूल परियोजना मिश्रण के माध्यम से अपने EBITDA मार्जिन को बनाए रखने या सुधारने की कंपनी की क्षमता की निगरानी करनी चाहिए।[9, 10]</li>
         </ol>
-        <p>निष्कर्ष में, जबकि सुजलॉन एनर्जी ने विशिष्ट वित्तीय और नेतृत्व घोषणाओं के कारण अल्पकालिक झटका अनुभव किया, भारत के बढ़ते नवीकरणीय ऊर्जा क्षेत्र में इसकी मौलिक स्थिति मजबूत बनी हुई है। वर्तमान गिरावट इसकी दीर्घकालिक विकास प्रक्षेपवक्र में एक मौलिक बदलाव के बजाय तत्काल जोखिमों का पुनर्मूल्यांकन कर सकती है। दीर्घकालिक क्षितिज वाले निवेशक जो इस क्षेत्र में निहित निष्पादन जोखिमों से सहज हैं, उन्हें मूल्य मिल सकता है, बशर्ते कंपनी अपने परिचालन बाधाओं और नेतृत्व संक्रमण पर ठोस प्रगति प्रदर्शित करे।</p>
+        <p>निष्कर्ष में,  jamshed alam जबकि सुजलॉन एनर्जी ने विशिष्ट वित्तीय और नेतृत्व घोषणाओं के कारण अल्पकालिक झटका अनुभव किया, भारत के बढ़ते नवीकरणीय ऊर्जा क्षेत्र में इसकी मौलिक स्थिति मजबूत बनी हुई है। वर्तमान गिरावट इसकी दीर्घकालिक विकास प्रक्षेपवक्र में एक मौलिक बदलाव के बजाय तत्काल जोखिमों का पुनर्मूल्यांकन कर सकती है। दीर्घकालिक क्षितिज वाले निवेशक जो इस क्षेत्र में निहित निष्पादन जोखिमों से सहज हैं, उन्हें मूल्य मिल सकता है, बशर्ते कंपनी अपने परिचालन बाधाओं और नेतृत्व संक्रमण पर ठोस प्रगति प्रदर्शित करे।</p>
     </div>
 </body>
 </html>
